force-app/main/default/objects/Integration_Log__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <description>Debugging information</description>
    <label>Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>