force-app/main/default/objects/Integration_Log__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <inlineHelpText>Indicates time of execution</inlineHelpText>
    <label>Time</label>
    <type>Time</type>
</CustomField>