force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Time__c</columns>
    <columns>Level__c</columns>
    <columns>Donation_Type__c</columns>
    <columns>Service__c</columns>
    <columns>Message__c</columns>
    <columns>Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>